# krippendorff-at-school

./: README.md  pyproject.toml
data/: OPTIS_Interrater_Pilotierung.csv  OPTIS_Interrater_Pilotierung.xlsx  OPTIS_Interrater_Pilotierung_Testphase.csv  OPTIS_Interrater_Pilotierung_Testphase.xlsx  OPTIS_Intrarater_Pilotierung.csv  OPTIS_Intrarater_Pilotierung.xlsx
src/: app.py
