[tool.poetry]
name = "krippendorff-at-school"
version = "0.1.0"
description = ""
authors = ["fabianbrueck <f.brueck@ampeersenergy.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
streamlit = "^1.29.0"
pandera = "^0.18.0"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
ruff = "^0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
